--- a/Vorlage.tex
+++ b/Vorlage.tex
@@ -30,6 +30,7 @@
 \usepackage{graphicx}
 %Pfad zu den Bildern --> Bei Verwendung eines Bildes in includegraphics muss nur der Name des Bildes genannt werden, z.B. DHBW_Logo
 \graphicspath{{Pictures/}}
+\usepackage{subcaption}
 
 %Für weitere komplexere Grafiken und Positionierung, mehr auf https://www.overleaf.com/learn/latex/TikZ_package
 \usepackage{tikz}
