Use scrhack.tex

--- a/Vorlage.tex
+++ b/Vorlage.tex
@@ -1,6 +1,8 @@
 %Standard Dokumenten Einstellungen
 %Einstellen der Schriftgröße
 \documentclass[a4paper,12pt]{scrreport}
+%Enfernt eine Fehlermeldung (KOMA-Script)
+\usepackage{scrhack}
 
 %Einstellen des Seitenabstand
 \usepackage[left= 2.5cm,right = 2.5cm, bottom = 4 cm, top = 2.5cm]{geometry}
