--- a/Sections/Example.tex
+++ b/Sections/Example.tex
@@ -1,4 +1,5 @@
-% !TEX root = ../Vorlage.tex
+% !TeX root = ../template.tex
+
 \chapter{Beispiel Kapitel}
 Die Datei zu diesem Kapitel findest du im Sections Ordner, als Example.tex.\\
 In dieser Datei geht es darum euch einen Einblick in die Verwendung der Kommandos aus der Dokumentation Kapitel 3 zu geben \footcite{doku}.
@@ -18,7 +19,7 @@ Zudem wird gezeigt wie man Bilder einfügt und diese referenzieren kann.
 \begin{center}
  \begin{figure}[h!]
   \centering
-  \includegraphics[scale = 0.3]{DHBW_Logo}
+  \includegraphics[scale = 0.3]{dhbw-logo}
   \caption{Dies ist ein Logo, link zu DHBW Logo ist in Pictures/downloads.txt zu finden}
   \label{fig:dhbwlogo}
  \end{figure}
