--- a/Sections/defaults/personal-contribution/personal-contribution.tex
+++ b/Sections/defaults/personal-contribution/personal-contribution.tex
@@ -1,5 +1,4 @@
-% Wichtig, damit man nicht immer von Vorlage.tex bauen muss
-% !TEX root = ../Vorlage.tex
+% !TeX root = ../../../template.tex
 \chapter*{Erklärung}
 
 Ich versichere hiermit, dass ich meine Bachelorarbeit (bzw. Studien- und Projektarbeit) mit dem
