--- a/Sections/defaults/blocking-notice/blocking-notice-et.tex
+++ b/Sections/defaults/blocking-notice/blocking-notice-et.tex
@@ -1,4 +1,4 @@
-% !TEX root = ../Vorlage.tex
+% !TeX root = ../../../template.tex
 \chapter*{Sperrvermerk}
 \addcontentsline{toc}{chapter}{Sperrvermerk}
 Dieser Bericht enthält vertrauliche Daten der ABB Automation GmbH in Mannheim. Jegliche Vervielfältigung oder Veröffentlichung von Inhalten, Resultaten oder Zusammenfassungen ist nur mit ausdrücklicher schriftlicher Genehmigung der ABB Automation GmbH und unter Benachrichtigung des Autors gestattet.
