--- a/Sections/defaults/blocking-notice/blocking-notice-it.tex
+++ b/Sections/defaults/blocking-notice/blocking-notice-it.tex
@@ -1,4 +1,4 @@
-% !TEX root = ../Vorlage.tex
+% !TeX root = ../../../template.tex
 \chapter*{Sperrvermerk}
 \glqq Der Inhalt dieser Arbeit darf weder als Ganzes noch in Auszügen Personen außerhalb des Prüfungsprozesses und des Evaluationsverfahrens zugänglich gemacht werden, sofern keine anders
 lautende Genehmigung des Dualen Partners vorliegt.\grqq{} [Ende der Sperrfrist: \SperrvermerkAuslaufDatum]
