--- a/template.tex
+++ b/template.tex
@@ -61,7 +61,7 @@
 
 %Eigene Kapitel
 %Kapitel als eigene .tex datei erstellen und einbinden mit: \include{Pfad/Dateiname}
-\include{Sections/Example}
+\include{sections/example}
 
 %===============================================================================
 \pagenumbering{Roman}
