add citation page referencing

--- a/sections/example.tex
+++ b/sections/example.tex
@@ -27,3 +27,11 @@ Zudem wird gezeigt wie man Bilder einfügt und diese referenzieren kann.
 Sowie zum Beispiel \ref{fig:dhbwlogo} referenziert wird.
 \section{Zitieren}
 Ein weiterer Teil ist, wie zitiert wird, ob auf \glqq{}Deutsche\grqq{} oder auf ``Englische'' Art und Weise\footcite[3.2]{doku}.
+
+\cite[1]{doku}
+
+\cite[1\psq]{doku}
+
+\cite[1\psqq]{doku}
+
+\cite[1-4]{doku}
