change style of new paragraph

--- a/template.tex
+++ b/template.tex
@@ -1,7 +1,7 @@
 %Standard Dokumenten Einstellungen
 %Einstellen der Schriftgröße
-\documentclass[a4paper,12pt]{scrreport}
-% \documentclass[a4paper,12pt, parskip=full]{scrreport}
+% \documentclass[a4paper,12pt]{scrreport}
+\documentclass[a4paper,12pt, parskip=full]{scrreport}
 
 % Eingabe der benötigten Konfigurationen
 \input{config/parameter.tex} 
