fix font size problem

--- a/sections/defaults/personal-contribution/personal-contribution.tex
+++ b/sections/defaults/personal-contribution/personal-contribution.tex
@@ -6,7 +6,7 @@ Thema: \Titel selbstständig verfasst und keine anderen als die angegebenen Quel
 benutzt habe.
 Ich versichere zudem, dass die eingereichte elektronische Fassung mit der gedruckten Fassung
 übereinstimmt. *\\
-\small{* falls beide Fassungen gefordert sind}\\[3cm]
+{\small * falls beide Fassungen gefordert sind}\\[3cm]
 \begin{tabularx}{\textwidth}[b]{p{5cm} X p{5cm}} \cline{1-1} \cline{3-3}
  Ort, Datum &  & Unterschrift 
 \end{tabularx}
