fix spacing issue

--- a/sections/defaults/personal-contribution/personal-contribution.tex
+++ b/sections/defaults/personal-contribution/personal-contribution.tex
@@ -2,7 +2,7 @@
 \chapter*{Erklärung}
 
 Ich versichere hiermit, dass ich meine Bachelorarbeit (bzw. Studien- und Projektarbeit) mit dem
-Thema: \Titel selbstständig verfasst und keine anderen als die angegebenen Quellen und Hilfsmittel
+Thema: \Titel{} selbstständig verfasst und keine anderen als die angegebenen Quellen und Hilfsmittel
 benutzt habe.
 Ich versichere zudem, dass die eingereichte elektronische Fassung mit der gedruckten Fassung
 übereinstimmt. *\\
